thesis: Change title and second supervisor

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -151,8 +151,7 @@
     {\scshape\Large Fakultät für Mathematik und Informatik} \par
     {\scshape\Large Abteilung Technische Informatik} \par
     \vspace{2.3cm}
-    {\huge\bfseries Securing an Architecture} \par
-    {\Large Applying Information Flow Control Policie to an Architectural Specification} \par
+    {\huge\bfseries Model Checking Information Flow Control Policies on Instruction Set Architectures} \par
     \vspace{1.5cm}
     {\scshape\Large Masterarbeit} \par
     \vspace{0.3cm}
@@ -169,7 +168,7 @@
         Prof. Dr. Martin Bogdan \par
         \columnbreak
         Zweitbetreut durch: \par
-        Dr. Alastair Reid
+        Jörn Hoffmann
     \end{multicols}
 \end{titlepage}
 
