--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -88,6 +88,7 @@
 \newacronym{pma}{PMA}{phsyical memory attribute}
 \newacronym{pmp}{PMP}{physical memory protection}
 \newacronym{hdl}{HDL}{hardware description language}
+\newacronym{bmc}{BMC}{Bounded Model Checking}
 \newacronym{2bmc}{2BMC}{Bounded Model Checking-Based Model Checking}
 \newacronym{cegar}{CEGAR}{Counterexample Guided Abstaction Refinement}
 
@@ -138,7 +139,7 @@
 
 \sloppy
 
-\hyphenation{im-ple-ment-ed}
+\hyphenation{im-ple-ment-ed ap-pro-xi-ma-ti-on}
 
 \begin{document}
 
