--- a/results/SANITIZE-CACHE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
+++ b/results/SANITIZE-CACHE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
@@ -3,7 +3,7 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} &   & \multirow{2}{*}{\minrv{---}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \CT & \CT & \CT & \CT &&&&& \\
+     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{---}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \CT & \CT & \CT & \CT &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Csrrs 1, 1, 3}} & \minrv{r} &  & \PT &  &  &  &   & \multirow{2}{*}{\minrv{--W}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
