--- a/results/SANITIZE-ON-CALL/CSR-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CALL/CSR-INTEGRITY.tex
@@ -3,7 +3,7 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} &   & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \CU & \CU &&&&& \\
+     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \CU & \CU &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Ecall}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
