--- a/results/CLEAR-CACHE-ON-DECLASSIFICATION/NO-LEAK.tex
+++ b/results/CLEAR-CACHE-ON-DECLASSIFICATION/NO-LEAK.tex
@@ -3,7 +3,7 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} &   & \multirow{2}{*}{\minrv{-R-}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-R-}} \\ & \minrv{m} & \PT & \PT & \PT & \PT &&&&& \\
+     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{-R-}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-R-}} \\ & \minrv{m} & \PT & \PT & \PT & \PT &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Csrrc 2, 3, 2}} & \minrv{r} &  &  & \PT &  &  &   & \multirow{2}{*}{\minrv{---}} &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
