--- a/results/NO-PUBLIC-WRITES/NO-LEAK.tex
+++ b/results/NO-PUBLIC-WRITES/NO-LEAK.tex
@@ -3,7 +3,7 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} &   & \multirow{2}{*}{\minrv{-RW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{LR-}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
+     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{-RW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{LR-}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Store 2, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
