thesis: Add first paragraphs to result section

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -13,6 +13,8 @@
 \usepackage{multicol}
 \usepackage{bussproofs}
 \usepackage{adjustbox}
+\usepackage{rotating}
+\usepackage{pifont}
 \usetikzlibrary{positioning,calc,graphs,shapes,arrows}
 
 \setlength{\grammarindent}{8em}
@@ -34,6 +36,7 @@
 \newcommand{\T}{\text{T}}
 \newcommand{\U}{\text{U}}
 \newcommand{\binSigma}{\ensuremath{\Sigma_{01}}}
+\newcommand{\tilthdr}[1]{\rlap{\rotatebox{60}{#1}}}
 
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
