thesis: Introduce memory read/write assumptions

--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -31,15 +31,15 @@ A check mark denotes that the respective assumption is critical for the respecti
         \cline{2-4}
         \smv{SANITIZE_ON_CALL} & \checkmark & \checkmark & \\
         \cline{2-4}
-        \smv{NO_PUBLIC_READS} & \checkmark & \checkmark & \\
-        \cline{2-4}
         \smv{NO_PUBLIC_WRITES} &&& \checkmark \\
+        \cline{2-4}
+        \smv{NO_PUBLIC_READS} & \checkmark & \checkmark & \\
         \cline{2-4}
         \smv{CLEAR_ON_DECLASSIFICATION} &&& \checkmark \\
         \cline{2-4}
-        \smv{CLEAR_CACHE_ON_DECLASSIFICATION} &&& \checkmark \\
-        \cline{2-4}
         \smv{SANITIZE_ON_CLASSIFICATION} & \checkmark & \checkmark & \\
+        \cline{2-4}
+        \smv{CLEAR_CACHE_ON_DECLASSIFICATION} &&& \checkmark \\
         \cline{2-4}
         \smv{SANITIZE_CACHE_ON_CLASSIFICATION} & \checkmark & \checkmark & \\
         \cline{2-4}
@@ -148,6 +148,71 @@ User-mode then calls machine-mode which decides to use the contents of the regis
     \input{../results/SANITIZE-ON-CALL/MEMORY-OP-INTEGRITY.tex}
     \caption{\smv{SANITIZE_ON_CALL} counter-example for \smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i})}
     \label{tbl:cex-mem-i-soc}
+\end{table}
+
+It has already been touched that both assumptions \smv{CLEAR_ON_RET} (cf. snippet \ref{snpt:clr-on-ret}) and \smv{SANITIZE_ON_CALL} (cf. snippet \ref{snpt:san-on-call}) are similar to each other.
+This relation characterizes a pattern that can be recognized for other groups of assumptions.
+It turned out that for every confidentiality related assumption such as \smv{CLEAR_ON_RET}, there was a similar integrity related assumption such as \smv{SANITIZE_ON_CALL}.
+This can be easily seen in table \ref{tbl:assumptions-overview} where in alternating rows, two groups of assumptions can be distinguished those which are relevant to the \smv{NO_LEAK} property and those which are relevant to the \smv{MEMORY_OP_INTEGRITY} and \smv{CSR_INTEGRITY} property.
+Additionally it is noteworthy that these two groups of assumptions can be characterized by the way they constrain information flow.
+Whereas confidentiality related assumptions always constrain flow of information going \textit{out} of machine-mode, integrity related assumptions always constrain flow of information going \textit{in} machine-mode.
+
+\paragraph{No public memory accesses in machine-mode}
+Two assumptions about memory reads and writes join the ranks of these groups, namely \smv{NO_PUBLIC_WRITES} and \smv{NO_PUBLIC_READS} which are formally given in snippet \ref{snpt:no-public-writes} and \ref{snpt:no-public-reads} respectively.
+These two assumptions don't express more than the title says; they require machine-mode to never read from or write to public memory.
+
+\begin{figure}
+    \begin{lstlisting}[
+        language=smv,
+        caption={Assumption \lstinline{NO_PUBLIC_WRITES}},
+        label={snpt:no-public-writes}
+    ]
+        G (priv & op = STORE -> (
+            mem_addr < $REGION0_SIZE
+                ? !pmpcfg0.read
+                : !pmpcfg1.read
+        ))
+    \end{lstlisting}
+\end{figure}
+
+\begin{figure}
+    \begin{lstlisting}[
+        language=smv,
+        caption={Assumption \lstinline{NO_PUBLIC_READS}},
+        label={snpt:no-public-reads}
+    ]
+        G (priv & op = LOAD -> (
+            mem_addr < $REGION0_SIZE
+                ? !pmpcfg0.write
+                : !pmpcfg1.write
+        ))
+    \end{lstlisting}
+\end{figure}
+
+The three counter-examples involved in this two assumptions are rather straight-forward as well.
+If machine-mode is allowed to store arbitrary words into public memory, a simple counter-example to the \smv{NO_LEAK} property (\ref{itm:prop-no-leak}) is that machine-mode simply stores a secret into public memory which is then loaded by user-mode as illustrated by the trace in table \ref{tbl:cex-no-leak-npw}.
+On the other hand, if machine-mode is allowed to load arbitrary words from public memory nuXmv gives a counter-example to the properties \smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i}) and \smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i}) where all memory is untrusted in the initial state, machine-mode loads some word from memory and uses it to write a \gls{csr} with or as target address.
+These counter-examples are illustrated in table \ref{tbl:cex-csr-i-npw} and \ref{tbl:cex-mem-i-npw} respectively.
+
+\begin{table}
+    \centering
+    \input{../results/NO-PUBLIC-WRITES/NO-LEAK.tex}
+    \caption{\smv{NO_PUBLIC_WRITES} counter-example for \smv{NO_LEAK} (\ref{itm:prop-no-leak})}
+    \label{tbl:cex-no-leak-npw}
+\end{table}
+
+\begin{table}
+    \centering
+    \input{../results/NO-PUBLIC-READS/CSR-INTEGRITY.tex}
+    \caption{\smv{NO_PUBLIC_READS} counter-example for \smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i})}
+    \label{tbl:cex-csr-i-npw}
+\end{table}
+
+\begin{table}
+    \centering
+    \input{../results/NO-PUBLIC-READS/MEMORY-OP-INTEGRITY.tex}
+    \caption{\smv{NO_PUBLIC_READS} counter-example for \smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i})}
+    \label{tbl:cex-mem-i-npw}
 \end{table}
 
 \subsection{Canaries}
